--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-beta.3",
+    "halliday-sdk": "^1.8.0-beta-5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
